Fix textarea not showing all input
Only happened if the remarks were longer than 3 lines

--- a/iliasCorrector/static/style.css
+++ b/iliasCorrector/static/style.css
@@ -76,6 +76,8 @@ main {
           animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
   stroke-linecap: round;
 }
+textarea.materialize-textarea{height: auto;}
+
 
 @-webkit-keyframes rotate {
   100% {
